# fretboard

./: .gitignore  README.md  cli.py  fretboard.py  fretfind.py  gibson_les_paul.fretboard.json  gui.py  guitartool.py  presets.json  pyproject.toml  readme.md  requirements.txt
.test_tmp/: check_export.json  check_import.json  check_user.json  export_check.json
docs/: architecture.md  design_requirements.md  requirement_traceability.md
presets/: presets.json  user_presets.json
scripts/: generate_example.py  inspect_preset.py  run_cli.ps1  run_tests.ps1  run_ui.ps1  setup_env.ps1
src/fretboard/: __init__.py  app.py  cli.py  errors.py  logging_utils.py  units.py
src/fretboard/cad/: build123d_backend.py  defaults.py  interface.py  step_export.py
src/fretboard/domain/: construction.py  models.py  presets.py  slotting.py  taper.py  validation.py
src/fretboard/geometry/: construction_geometry.py  coordinate_system.py  inlays.py  outline.py  slots.py  surface.py
src/fretboard/music/: fret_positions.py  scales.py
src/fretboard/outputs/: files.py  manifest.py
src/fretboard/ui/: streamlit_app.py
tests/: test_cli.py  test_fret_positions.py  test_presets.py  test_presets_cli.py  test_requirements_traceability.py
