[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fretboard"
version = "0.1.0"
description = "Parametric guitar fretboard generator focused on scripted STEP export."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["build123d"]

[project.optional-dependencies]
ui = ["streamlit>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
fretboard = "fretboard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
